--- a/automation/cameras/front_window.yaml
+++ b/automation/cameras/front_window.yaml
@@ -1,7 +1,7 @@
 ---
 - alias: Sync front window camera time
   id: sync_front_window_camera_time
-  trigger:
+  triggers:
     - platform: time
       at: "00:00:00"
     - platform: homeassistant
