--- a/automation/house_safety.yaml
+++ b/automation/house_safety.yaml
@@ -1,6 +1,6 @@
 ---
 - alias: everyone has left
-  trigger:
+  triggers:
     - platform: state
       entity_id: group.all_people
       from: "home"
@@ -54,7 +54,7 @@
 
 - alias: intrusion when no one is home
   id: intrusion_when_no_one_is_home
-  trigger:
+  triggers:
     - platform: state
       entity_id: binary_sensor.garage_door
       to: "on"
@@ -109,7 +109,7 @@
 
 - alias: close garage door if no one is home
   id: close_garage_door_if_no_one_is_home
-  trigger:
+  triggers:
     - platform: state
       entity_id: group.all_people
       from: "home"
@@ -161,7 +161,7 @@
 
 - alias: Alert when front door stays open
   id: Alert_when_front_door_stays_open
-  trigger:
+  triggers:
     - platform: state
       entity_id: binary_sensor.front_door
       to: "on"
@@ -211,7 +211,7 @@
 
 - alias: Alert when garage door stays open
   id: Alert_when_garage_door_stays_open
-  trigger:
+  triggers:
     - platform: state
       entity_id: binary_sensor.garage_door
       to: "on"
