--- a/automation/appliances/tv.yaml
+++ b/automation/appliances/tv.yaml
@@ -1,6 +1,6 @@
 ---
 - alias: tv notif phone ringing
-  trigger:
+  triggers:
     - platform: state
       entity_id: input_boolean.yan_phone_rings
       to: "on"
@@ -20,7 +20,7 @@
         message: "{{ name }}'s phone is ringing"
 
 - alias: tv notif phone notification
-  trigger:
+  triggers:
     - platform: state
       entity_id: input_boolean.yan_phone_notification
     - platform: state
@@ -40,7 +40,7 @@
 
 - alias: chromecast turns on
   id: chromecast_turns_on
-  trigger:
+  triggers:
     - platform: state
       entity_id: remote.salon_tv
       to: "on"
@@ -56,7 +56,7 @@
 
 - alias: chromecast turns off
   id: chromecast_turns_off
-  trigger:
+  triggers:
     - platform: state
       entity_id: remote.salon_tv
       to: "off"
@@ -72,7 +72,7 @@
 
 - alias: xbox turns on
   id: xbox_turns_on
-  trigger:
+  triggers:
     - platform: state
       entity_id: binary_sensor.xbox
       to: "on"
@@ -88,7 +88,7 @@
 
 - alias: xbox turns off
   id: xbox_turns_off
-  trigger:
+  triggers:
     - platform: state
       entity_id: binary_sensor.xbox
       to: "off"
@@ -103,7 +103,7 @@
         option: "power_off"
 
 - alias: Hyperion phone ringing
-  trigger:
+  triggers:
     - platform: state
       entity_id: input_boolean.yan_phone_rings
     - platform: state
@@ -134,7 +134,7 @@
             priority: "{{ effect_priority }}"
 
 - alias: Hyperion phone notification
-  trigger:
+  triggers:
     - platform: state
       entity_id: input_boolean.yan_phone_notification
     - platform: state
@@ -165,7 +165,7 @@
 
 - alias: tv turns on
   id: tv_turns_on
-  trigger:
+  triggers:
     - platform: state
       entity_id: media_player.tv
       to: "on"
@@ -176,7 +176,7 @@
 
 - alias: tv turns off
   id: tv_turns_off
-  trigger:
+  triggers:
     - platform: state
       entity_id: media_player.tv
       to: "off"
@@ -187,7 +187,7 @@
 
 - alias: set hyperhd hdr mode
   id: set_hyperhd_hdr_mode
-  trigger:
+  triggers:
     - platform: event
       event_type: denon_hdr
   actions:
@@ -197,7 +197,7 @@
 
 - alias: Query denon hdr mode
   id: query_denon_hdr_mode
-  trigger:
+  triggers:
     - platform: time_pattern
       seconds: "/30"
   condition:
