--- a/automation/appliances/washing_machine.yaml
+++ b/automation/appliances/washing_machine.yaml
@@ -1,7 +1,7 @@
 ---
 - alias: Washer leak detected
   id: Washer_leak_detected
-  trigger:
+  triggers:
     - platform: state
       entity_id: binary_sensor.washer_leak_sensor
       to: "on"
