--- a/automation/lock.yaml
+++ b/automation/lock.yaml
@@ -1,6 +1,6 @@
 ---
 - alias: "Auto Lock Front Door"
-  trigger:
+  triggers:
     - platform: state
       entity_id: lock.front_door_lock
       to: "unlocked"
@@ -23,7 +23,7 @@
         lock_id: lock.front_door_lock
 
 - alias: "Auto unlock Front Door if door is open"
-  trigger:
+  triggers:
     - platform: state
       entity_id: lock.front_door_lock
       to: "locked"
