--- a/automation/appliances/blinds.yaml
+++ b/automation/appliances/blinds.yaml
@@ -2,15 +2,15 @@
 - alias: Open blinds in the morning
   id: open_blinds_in_the_morning
   triggers:
-    - platform: sun
+    - trigger: sun
       event: sunrise
-    - platform: state
+    - trigger: state
       entity_id: climate.main_floor
       attribute: preset_mode
       from: sleep
-    - platform: time
+    - trigger: time
       at: "06:30:00"
-    - platform: time
+    - trigger: time
       at: "07:00:00"
   condition:
     - condition: sun
@@ -42,9 +42,9 @@
 - alias: Close blinds in the evening
   id: close_blinds_in_the_evening
   triggers:
-    - platform: sun
+    - trigger: sun
       event: sunset
-    - platform: state
+    - trigger: state
       entity_id: climate.main_floor
       attribute: preset_mode
       to: sleep
@@ -61,7 +61,7 @@
 - alias: CLose office blind when kid goes to sleep
   id: cLose_office_blind_when_kid_goes_to_sleep
   triggers:
-    - platform: state
+    - trigger: state
       entity_id: switch.baby_monitor
       to: "on"
   condition:
@@ -74,9 +74,9 @@
 - alias: Sync office blind with sun when working
   id: sync_office_blind_with_sun_when_working
   triggers:
-    - platform: time
+    - trigger: time
       at: "07:00:00"
-    - platform: time
+    - trigger: time
       at: "16:20:00"
   condition:
     - condition: time
@@ -96,7 +96,7 @@
 - alias: Turn on office blind control in the morning on work from home days
   id: turn_on_office_blind_control_in_the_morning_on_work_from_home_days
   triggers:
-    - platform: time
+    - trigger: time
       at: "07:00:00"
   condition:
     - condition: time
@@ -111,7 +111,7 @@
 - alias: Turn off office blind control in the evening on work from home days
   id: turn_off_office_blind_control_in_the_evening_on_work_from_home_days
   triggers:
-    - platform: time
+    - trigger: time
       at: "16:20:00"
   condition:
     - condition: time
