--- a/automation/cameras/front_window.yaml
+++ b/automation/cameras/front_window.yaml
@@ -2,9 +2,9 @@
 - alias: Sync front window camera time
   id: sync_front_window_camera_time
   triggers:
-    - platform: time
+    - trigger: time
       at: "00:00:00"
-    - platform: homeassistant
+    - trigger: homeassistant
       event: start
   condition:
     condition: state
