--- a/automation/lock.yaml
+++ b/automation/lock.yaml
@@ -1,12 +1,12 @@
 ---
 - alias: "Auto Lock Front Door"
   triggers:
-    - platform: state
+    - trigger: state
       entity_id: lock.front_door_lock
       to: "unlocked"
       for:
         minutes: 5
-    - platform: state
+    - trigger: state
       entity_id: binary_sensor.front_door
       to: "off"
       for:
@@ -24,7 +24,7 @@
 
 - alias: "Auto unlock Front Door if door is open"
   triggers:
-    - platform: state
+    - trigger: state
       entity_id: lock.front_door_lock
       to: "locked"
   condition:
