--- a/automation/hue_remote.yaml
+++ b/automation/hue_remote.yaml
@@ -2,7 +2,7 @@
 - alias: Hue restart integration event workaround
   id: Hue_restart_integration_event_workaround
   triggers:
-    platform: time
+    trigger: time
     at: "19:00:00"
   actions:
     action: homeassistant.reload_config_entry
