--- a/automation/lock.yaml
+++ b/automation/lock.yaml
@@ -11,7 +11,7 @@
       to: "off"
       for:
         minutes: 5
-  condition:
+  conditions:
     - condition: state
       entity_id: binary_sensor.front_door
       state: "off"
@@ -27,7 +27,7 @@
     - trigger: state
       entity_id: lock.front_door_lock
       to: "locked"
-  condition:
+  conditions:
     - condition: state
       entity_id: binary_sensor.front_door
       state: "on"
